chore: use latest source config url

--- a/examples/v3-legacy/index.html
+++ b/examples/v3-legacy/index.html
@@ -61,7 +61,7 @@
         }
         var loadOptions = {
           logLevel: 'DEBUG',
-          configUrl: 'https://api.rudderlabs.com',
+          configUrl: 'https://api.rudderstack.com',
           destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
           pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins'
         };
