--- a/packages/loading-scripts/public/index.html
+++ b/packages/loading-scripts/public/index.html
@@ -76,6 +76,14 @@
       rudderanalytics.ready(function () {
         console.log('All ready!!!');
       });
+
+      document.addEventListener('RSA_Initialised', function (e) {
+        console.log('RSA_Initialised', e.detail.analyticsInstance);
+      });
+
+      document.addEventListener('RSA_Ready', function (e) {
+        console.log('RSA_Ready', e.detail.analyticsInstance);
+      });
     </script>
   </head>
   <body>
