--- a/packages/sanity-suite/public/v3/integrations/index-cdn.html
+++ b/packages/sanity-suite/public/v3/integrations/index-cdn.html
@@ -40,8 +40,7 @@
             window.rudderAnalyticsBuildType = "legacy";
             var sdkBaseUrl = "https://cdn.rudderlabs.com/__CDN_VERSION_PATH__";
             var sdkName = "rsa.min.js";
-            var asyncScript = true;
-            var deferScript = false;
+            var scriptLoadingMode = "async";
             var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent" ];
             for (var i = 0; i < methods.length; i++) {
               var method = methods[i];
@@ -69,9 +68,9 @@
               if (extraAttributeKey && extraAttributeVal) {
                 scriptTag.setAttribute(extraAttributeKey, extraAttributeVal);
               }
-              if (asyncScript) {
+              if (scriptLoadingMode === "async") {
                 scriptTag.async = true;
-              } else if (deferScript) {
+              } else if (scriptLoadingMode === "defer") {
                 scriptTag.defer = true;
               }
               if (head) {
