fix: improve sdk loading snippet (#1745)
* fix: improve sdk loading snippet

* chore: turn off code coverage

* fix: minor issues in loading snippet

* chore: add dev server support

* chore: use the new snippet everywhere

* fix: replace flags with script loading mode

--- a/examples/integrations/Ninetailed/sample-apps/app-using-v3-cdn/public/index.html
+++ b/examples/integrations/Ninetailed/sample-apps/app-using-v3-cdn/public/index.html
@@ -26,22 +26,27 @@
     -->
     <title>React App</title>
     <script type="text/javascript">
-      !function(){"use strict";var sdkBaseUrl="https://cdn.rudderlabs.com/v3";var sdkName="rsa.min.js";var asyncScript=true
-      ;window.rudderAnalyticsBuildType="legacy",window.rudderanalytics=[]
-      ;var e=["setDefaultInstanceKey","load","ready","page","track","identify","alias","group","reset","setAnonymousId","startSession","endSession"]
-      ;for(var t=0;t<e.length;t++){var n=e[t];window.rudderanalytics[n]=function(e){return function(){
-      window.rudderanalytics.push([e].concat(Array.prototype.slice.call(arguments)))}}(n)}try{
-      new Function('return import("")'),window.rudderAnalyticsBuildType="modern"}catch(a){}
-      if(window.rudderAnalyticsMount=function(){
+      !function(){"use strict";window.RudderSnippetVersion="3.0.9";var e="rudderanalytics";window[e]||(window[e]=[])
+      ;var t=window[e];if(Array.isArray(t)){if(true===t.snippetExecuted&&window.console&&console.error){
+      console.error("RudderStack JavaScript SDK snippet included more than once.")}else{t.snippetExecuted=true,
+      window.rudderAnalyticsBuildType="legacy";var sdkBaseUrl="https://cdn.rudderlabs.com/v3";var sdkName="rsa.min.js"
+      ;var r="async"
+      ;var n=["setDefaultInstanceKey","load","ready","page","track","identify","alias","group","reset","setAnonymousId","startSession","endSession","consent"]
+      ;for(var i=0;i<n.length;i++){var d=n[i];t[d]=function(r){return function(){var n
+      ;Array.isArray(window[e])?t.push([r].concat(Array.prototype.slice.call(arguments))):null===(n=window[e][r])||void 0===n||n.apply(window[e],arguments)
+      }}(d)}try{new Function('return import("")'),window.rudderAnalyticsBuildType="modern"}catch(c){}
+      var o=document.head||document.getElementsByTagName("head")[0]
+      ;var a=document.body||document.getElementsByTagName("body")[0];window.rudderAnalyticsAddScript=function(e,t,n){
+      var i=document.createElement("script");i.src=e,i.setAttribute("data-loader","RS_JS_SDK"),t&&n&&i.setAttribute(t,n),
+      "async"===r?i.async=true:"defer"===r&&(i.defer=true),o?o.insertBefore(i,o.firstChild):a.insertBefore(i,a.firstChild)},
+      window.rudderAnalyticsMount=function(){
       "undefined"==typeof globalThis&&(Object.defineProperty(Object.prototype,"__globalThis_magic__",{get:function get(){
       return this},configurable:true}),__globalThis_magic__.globalThis=__globalThis_magic__,
-      delete Object.prototype.__globalThis_magic__);var e=document.createElement("script")
-      ;e.src="".concat(sdkBaseUrl,"/").concat(window.rudderAnalyticsBuildType,"/").concat(sdkName),e.async=asyncScript,
-      document.head?document.head.appendChild(e):document.body.appendChild(e)
-      },"undefined"==typeof Promise||"undefined"==typeof globalThis){var d=document.createElement("script")
-      ;d.src="https://polyfill.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount",
-      d.async=asyncScript,document.head?document.head.appendChild(d):document.body.appendChild(d)}else{
-      window.rudderAnalyticsMount()}}();    
+      delete Object.prototype.__globalThis_magic__),
+      window.rudderAnalyticsAddScript("".concat(sdkBaseUrl,"/").concat(window.rudderAnalyticsBuildType,"/").concat(sdkName),"data-rsa-write-key","dummyWriteKey")
+      },
+      "undefined"==typeof Promise||"undefined"==typeof globalThis?window.rudderAnalyticsAddScript("https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount"):window.rudderAnalyticsMount()
+      ;}}}();
 </script>
   </head>
   <body>
