--- a/packages/loading-scripts/public/index.html
+++ b/packages/loading-scripts/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="https://rudderstack.com/favicon.ico" type="image/x-icon" sizes="48x48">
     <script>
       rudderanalytics.identify(
         'customUserID',
