--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="https://rudderstack.com/favicon.ico" type="image/x-icon" sizes="48x48">
     <script>
       (function() {
         "use strict";
-        window.RudderSnippetVersion = "3.0.9";
+        window.RudderSnippetVersion = "3.0.10";
         var identifier = "rudderanalytics";
         if (!window[identifier]) {
           window[identifier] = [];
@@ -92,7 +93,6 @@
               // },
               // useBeacon: true,
               // beaconQueueOptions: {
-              //   flushQueueInterval: 10 * 1000,
               //   maxItems: 5,
               // },
               // sessions: {
