--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -117,9 +117,9 @@
               logLevel: 'DEBUG',
               configUrl: '__CONFIG_SERVER_HOST__',
               destSDKBaseURL:
-                '__DEST_SDK_BASE_URL__' + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
+                '__DEST_SDK_BASE_URL__',
               pluginsSDKBaseURL:
-                '__REMOTE_MODULES_BASE_PATH__' + '/' + window.rudderAnalyticsBuildType + '/plugins',
+                '__PLUGINS_SDK_BASE_URL__',
               lockIntegrationsVersion: true,
               consentManagement: {
                 enabled: true,
