--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -81,16 +81,28 @@
               }
             };
             window.rudderAnalyticsMount = function() {
-              if (typeof globalThis === "undefined") {
-                Object.defineProperty(Object.prototype, "__globalThis_magic__", {
-                  get: function get() {
-                    return this;
-                  },
-                  configurable: true
-                });
-                __globalThis_magic__.globalThis = __globalThis_magic__;
-                delete Object.prototype.__globalThis_magic__;
-              }
+              (function() {
+                if (typeof globalThis === "undefined") {
+                  var getGlobal = function() {
+                    if (typeof self !== "undefined") { 
+                      return self; 
+                    }
+                    if (typeof window !== "undefined") { 
+                      return window; 
+                    }
+                    return null;
+                  };
+                  
+                  var global = getGlobal();
+                  
+                  if (global) {
+                    Object.defineProperty(global, 'globalThis', {
+                      value: global,
+                      configurable: true
+                    });
+                  }
+                }
+              })();
               // window.rudderAnalyticsAddScript("".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName), "data-rsa-write-key", "__WRITE_KEY__");
             };
             if (typeof Promise === "undefined" || typeof globalThis === "undefined") {
