--- a/examples/v3/iubenda.html
+++ b/examples/v3/iubenda.html
@@ -73,7 +73,7 @@
               __globalThis_magic__.globalThis = __globalThis_magic__;
               delete Object.prototype.__globalThis_magic__;
             }
-            window.rudderAnalyticsAddScript("".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName), "data-rsa-write-key", "2MV0pTK3pLNYyBxi60Ax0hcSm83");
+            window.rudderAnalyticsAddScript("".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName), "data-rsa-write-key", '__WRITE_KEY__');
           };
           if (typeof Promise === "undefined" || typeof globalThis === "undefined") {
             window.rudderAnalyticsAddScript("https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount");
@@ -95,15 +95,15 @@
               },
             },
             plugins: [
-              'CustomConsentManager'
+              'IubendaConsentManager'
             ],
             consentManagement: {
               enabled: true,
-              provider: 'custom',
+              provider: 'iubenda',
             },
-
+            useBeacon : true,
           }
-          rudderanalytics.load('2MV0pTK3pLNYyBxi60Ax0hcSm83', 'http://localhost:6060', loadOptions);
+          rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
         }
       }
     })();
