chore: replace var with let

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -61,7 +61,7 @@
             window.rudderAnalyticsMount = function() {
               (function() {
                 if (typeof globalThis === "undefined") {
-                  var getGlobal = function() {
+                  let getGlobal = function() {
                     if (typeof self !== "undefined") { 
                       return self; 
                     }
@@ -71,7 +71,7 @@
                     return null;
                   };
                   
-                  var global = getGlobal();
+                  let global = getGlobal();
                   
                   if (global) {
                     Object.defineProperty(global, 'globalThis', {
