--- a/packages/sanity-suite/public/v3/index-npm-bundled.html
+++ b/packages/sanity-suite/public/v3/index-npm-bundled.html
@@ -97,7 +97,7 @@
     <script>
       (function() {
         if (typeof globalThis === "undefined") {
-          var getGlobal = function() {
+          let getGlobal = function() {
             if (typeof self !== "undefined") { 
               return self; 
             }
@@ -107,7 +107,7 @@
             return null;
           };
           
-          var global = getGlobal();
+          let global = getGlobal();
           
           if (global) {
             Object.defineProperty(global, 'globalThis', {
