--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -59,16 +59,28 @@
               }
             };
             window.rudderAnalyticsMount = function() {
-              if (typeof globalThis === "undefined") {
-                Object.defineProperty(Object.prototype, "__globalThis_magic__", {
-                  get: function get() {
-                    return this;
-                  },
-                  configurable: true
-                });
-                __globalThis_magic__.globalThis = __globalThis_magic__;
-                delete Object.prototype.__globalThis_magic__;
-              }
+              (function() {
+                if (typeof globalThis === "undefined") {
+                  let getGlobal = function() {
+                    if (typeof self !== "undefined") { 
+                      return self; 
+                    }
+                    if (typeof window !== "undefined") { 
+                      return window; 
+                    }
+                    return null;
+                  };
+                  
+                  let global = getGlobal();
+                  
+                  if (global) {
+                    Object.defineProperty(global, 'globalThis', {
+                      value: global,
+                      configurable: true
+                    });
+                  }
+                }
+              })();
 
               // Commented out SDK script addition
               // as the build process automatically adds the script
