--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -7,6 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>RudderStack JS SDK v3 example: Iubenda</title>
   <script>
+    window._iub = window._iub || [];
+        var _iub = _iub || [];
+
+        _iub.csConfiguration = {
+            lang: 'en',
+            cookiePolicyId: 36178045,
+            siteId: 3405502,
+            logLevel: 'debug',
+            enableTcf: true,
+            perPurposeConsent: true,
+            skipSaveConsent: false,
+            banner: {
+              position: 'float-center'
+            }
+        };
+  </script>
+  <script async src="//cdn.iubenda.com/cs/stable/iubenda_cs.js"></script>
+  <script>
     (function () {
       "use strict";
       window.RudderSnippetVersion = "3.0.14";
@@ -21,7 +39,7 @@
         } else {
           rudderanalytics.snippetExecuted = true;
           window.rudderAnalyticsBuildType = "modern";
-          var sdkBaseUrl = "http://127.0.0.1:3002/cdn";
+          var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
           var sdkName = "rsa.min.js";
           var scriptLoadingMode = "async";
           var methods = ["setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent"];
@@ -73,6 +91,7 @@
               __globalThis_magic__.globalThis = __globalThis_magic__;
               delete Object.prototype.__globalThis_magic__;
             }
+            window.rudderAnalyticsAddScript("".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName), "data-rsa-write-key", '__WRITE_KEY__');
           };
           if (typeof Promise === "undefined" || typeof globalThis === "undefined") {
             window.rudderAnalyticsAddScript("https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount");
@@ -83,29 +102,15 @@
             logLevel: 'DEBUG',
             configUrl: 'https://api.rudderstack.com',
             destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
-            pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
-            queueOptions: {
-              minRetryDelay: 1000, // ms
-              batch: {
-                enabled: true,
-                maxItems: 100,
-                maxSize: 1024 * 512, // 512 KB
-                flushInterval: 60000 // ms
-              },
-            },
+            pluginsSDKBaseURL: "http://localhost:3002/cdn" + '/' + window.rudderAnalyticsBuildType + '/plugins',
+
             plugins: [
-              'IubendaConsentManager',
-              'XhrQueue',
-              'DeviceModeDestinations',
-              'NativeDestinationQueue',
-              'StorageEncryption',
-              'StorageMigrator',
+              'IubendaConsentManager'
             ],
             consentManagement: {
               enabled: true,
               provider: 'iubenda',
             },
-            // useBeacon : true,
           }
           rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
         }
@@ -200,27 +205,8 @@
 </head>
 
 <body>
-  <script>
-    window._iub = window._iub || [];
-    var _iub = _iub || [];
-
-    _iub.csConfiguration = {
-      lang: 'en',
-      cookiePolicyId: 36178045,
-      siteId: 3405502,
-      logLevel: 'debug',
-      enableTcf: true,
-      perPurposeConsent: true,
-      skipSaveConsent: false,
-      banner: {
-        position: 'float-center'
-      }
-    };
-  </script>
-  <script async src="//cdn.iubenda.com/cs/beta/iubenda_cs.js"></script>
   <h1>Page Loaded</h1>
   <br />
-
   <button data-testid="page-btn" onclick="page()">Page</button>
   <button data-testid="identify-btn" onclick="identify()">identify</button>
   <button data-testid="track-btn" onclick="track()">Track</button>
