chore: update loading snippet in all the examples

--- a/examples/integrations/Ninetailed/sample-apps/app-using-v3-cdn/public/index.html
+++ b/examples/integrations/Ninetailed/sample-apps/app-using-v3-cdn/public/index.html
@@ -26,28 +26,29 @@
     -->
     <title>React App</title>
     <script type="text/javascript">
-      !function(){"use strict";window.RudderSnippetVersion="3.0.10";var e="rudderanalytics";window[e]||(window[e]=[])
-      ;var t=window[e];if(Array.isArray(t)){if(true===t.snippetExecuted&&window.console&&console.error){
-      console.error("RudderStack JavaScript SDK snippet included more than once.")}else{t.snippetExecuted=true,
+      !function(){"use strict";window.RudderSnippetVersion="3.0.26";var e="rudderanalytics";window[e]||(window[e]=[])
+      ;var rudderanalytics=window[e];if(Array.isArray(rudderanalytics)){
+      if(true===rudderanalytics.snippetExecuted&&window.console&&console.error){
+      console.error("RudderStack JavaScript SDK snippet included more than once.")}else{rudderanalytics.snippetExecuted=true,
       window.rudderAnalyticsBuildType="legacy";var sdkBaseUrl="https://cdn.rudderlabs.com/v3";var sdkName="rsa.min.js"
-      ;var r="async"
+      ;var scriptLoadingMode="async"
       ;var n=["setDefaultInstanceKey","load","ready","page","track","identify","alias","group","reset","setAnonymousId","startSession","endSession","consent"]
-      ;for(var i=0;i<n.length;i++){var d=n[i];t[d]=function(r){return function(){var n
-      ;Array.isArray(window[e])?t.push([r].concat(Array.prototype.slice.call(arguments))):null===(n=window[e][r])||void 0===n||n.apply(window[e],arguments)
-      }}(d)}try{new Function('return import("")'),window.rudderAnalyticsBuildType="modern"}catch(c){}
-      var o=document.head||document.getElementsByTagName("head")[0]
-      ;var a=document.body||document.getElementsByTagName("body")[0];window.rudderAnalyticsAddScript=function(e,t,n){
-      var i=document.createElement("script");i.src=e,i.setAttribute("data-loader","RS_JS_SDK"),t&&n&&i.setAttribute(t,n),
-      "async"===r?i.async=true:"defer"===r&&(i.defer=true),o?o.insertBefore(i,o.firstChild):a.insertBefore(i,a.firstChild)},
-      window.rudderAnalyticsMount=function(){
-      "undefined"==typeof globalThis&&(Object.defineProperty(Object.prototype,"__globalThis_magic__",{get:function get(){
-      return this},configurable:true}),__globalThis_magic__.globalThis=__globalThis_magic__,
-      delete Object.prototype.__globalThis_magic__),
-      window.rudderAnalyticsAddScript("".concat(sdkBaseUrl,"/").concat(window.rudderAnalyticsBuildType,"/").concat(sdkName),"data-rsa-write-key","dummyWriteKey")
+      ;for(var r=0;r<n.length;r++){var t=n[r];rudderanalytics[t]=function(n){return function(){var r
+      ;Array.isArray(window[e])?rudderanalytics.push([n].concat(Array.prototype.slice.call(arguments))):null===(r=window[e][n])||void 0===r||r.apply(window[e],arguments)
+      }}(t)}try{new Function('return import("")'),window.rudderAnalyticsBuildType="modern"}catch(o){}
+      var d=document.head||document.getElementsByTagName("head")[0]
+      ;var i=document.body||document.getElementsByTagName("body")[0];window.rudderAnalyticsAddScript=function(e,n,r){
+      var t=document.createElement("script");t.src=e,t.setAttribute("data-loader","RS_JS_SDK"),n&&r&&t.setAttribute(n,r),
+      "async"===scriptLoadingMode?t.async=true:"defer"===scriptLoadingMode&&(t.defer=true),
+      d?d.insertBefore(t,d.firstChild):i.insertBefore(t,i.firstChild)},window.rudderAnalyticsMount=function(){!function(){
+      if("undefined"==typeof globalThis){var e;var n=function getGlobal(){
+      return"undefined"!=typeof self?self:"undefined"!=typeof window?window:null}();n&&Object.defineProperty(n,"globalThis",{
+      value:n,configurable:true})}
+      }(),window.rudderAnalyticsAddScript("".concat(sdkBaseUrl,"/").concat(window.rudderAnalyticsBuildType,"/").concat(sdkName),"data-rsa-write-key","dummyWriteKey")
       },
       "undefined"==typeof Promise||"undefined"==typeof globalThis?window.rudderAnalyticsAddScript("https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount"):window.rudderAnalyticsMount()
       ;}}}();
-</script>
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
