--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -5,7 +5,7 @@
     <script>
       (function() {
         "use strict";
-        window.RudderSnippetVersion = "3.0.10";
+        window.RudderSnippetVersion = "3.0.26";
         var identifier = "rudderanalytics";
         if (!window[identifier]) {
           window[identifier] = [];
@@ -61,7 +61,7 @@
             window.rudderAnalyticsMount = function() {
               (function() {
                 if (typeof globalThis === "undefined") {
-                  let getGlobal = function() {
+                  var getGlobal = function() {
                     if (typeof self !== "undefined") { 
                       return self; 
                     }
@@ -71,7 +71,7 @@
                     return null;
                   };
                   
-                  let global = getGlobal();
+                  var global = getGlobal();
                   
                   if (global) {
                     Object.defineProperty(global, 'globalThis', {
