--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -27,7 +27,7 @@
     <script>
       (function() {
         "use strict";
-        window.RudderSnippetVersion = "3.0.10";
+        window.RudderSnippetVersion = "3.0.29";
         var identifier = "rudderanalytics";
         if (!window[identifier]) {
           window[identifier] = [];
@@ -57,9 +57,10 @@
               }(method);
             }
             try {
-              new Function('return import("")');
+              new Function('class Test{field=()=>{};test({prop=[]}={}){return prop?(prop?.property??[...prop]):import("");}}');
               window.rudderAnalyticsBuildType = "modern";
-            } catch (e) {}
+            } catch (e) {
+            }
             var head = document.head || document.getElementsByTagName("head")[0];
             var body = document.body || document.getElementsByTagName("body")[0];
             window.rudderAnalyticsAddScript = function(url, extraAttributeKey, extraAttributeVal) {
@@ -83,7 +84,7 @@
             window.rudderAnalyticsMount = function() {
               (function() {
                 if (typeof globalThis === "undefined") {
-                  let getGlobal = function() {
+                  var getGlobal = function() {
                     if (typeof self !== "undefined") { 
                       return self; 
                     }
@@ -93,7 +94,7 @@
                     return null;
                   };
                   
-                  let global = getGlobal();
+                  var global = getGlobal();
                   
                   if (global) {
                     Object.defineProperty(global, 'globalThis', {
