--- a/packages/sanity-suite/public/v3/integrations/index-cdn.html
+++ b/packages/sanity-suite/public/v3/integrations/index-cdn.html
@@ -25,6 +25,7 @@
     </script>
 
     <script>
+      // prettier-ignore
       (function() {
         "use strict";
         window.RudderSnippetVersion = "3.0.30";
@@ -35,61 +36,43 @@
         var rudderanalytics = window[identifier];
         if (Array.isArray(rudderanalytics)) {
           if (rudderanalytics.snippetExecuted === true && window.console && console.error) {
-            console.error('RudderStack JavaScript SDK snippet included more than once.');
+            console.error("RudderStack JavaScript SDK snippet included more than once.");
           } else {
             rudderanalytics.snippetExecuted = true;
-            window.rudderAnalyticsBuildType = 'legacy';
-            var sdkBaseUrl = 'https://cdn.rudderlabs.com/__CDN_VERSION_PATH__';
-            var sdkName = 'rsa.min.js';
-            var scriptLoadingMode = 'async';
-            var methods = [
-              'setDefaultInstanceKey',
-              'load',
-              'ready',
-              'page',
-              'track',
-              'identify',
-              'alias',
-              'group',
-              'reset',
-              'setAnonymousId',
-              'startSession',
-              'endSession',
-              'consent',
-            ];
+            window.rudderAnalyticsBuildType = "legacy";
+            var sdkBaseUrl = "https://cdn.rudderlabs.com/__CDN_VERSION_PATH__";
+            var sdkName = "rsa.min.js";
+            var scriptLoadingMode = "async";
+            var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent" ];
             for (var i = 0; i < methods.length; i++) {
               var method = methods[i];
-              rudderanalytics[method] = (function (methodName) {
-                return function () {
+              rudderanalytics[method] = function(methodName) {
+                return function() {
                   if (Array.isArray(window[identifier])) {
-                    rudderanalytics.push(
-                      [methodName].concat(Array.prototype.slice.call(arguments)),
-                    );
+                    rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
                   } else {
                     var _methodName;
-                    (_methodName = window[identifier][methodName]) === null ||
-                      _methodName === void 0 ||
-                      _methodName.apply(window[identifier], arguments);
+                    (_methodName = window[identifier][methodName]) === null || _methodName === void 0 || _methodName.apply(window[identifier], arguments);
                   }
                 };
-              })(method);
+              }(method);
             }
             try {
               new Function('class Test{field=()=>{};test({prop=[]}={}){return prop?(prop?.property??[...prop]):import("");}}');
               window.rudderAnalyticsBuildType = "modern";
             } catch (e) {}
-            var head = document.head || document.getElementsByTagName('head')[0];
-            var body = document.body || document.getElementsByTagName('body')[0];
-            window.rudderAnalyticsAddScript = function (url, extraAttributeKey, extraAttributeVal) {
-              var scriptTag = document.createElement('script');
+            var head = document.head || document.getElementsByTagName("head")[0];
+            var body = document.body || document.getElementsByTagName("body")[0];
+            window.rudderAnalyticsAddScript = function(url, extraAttributeKey, extraAttributeVal) {
+              var scriptTag = document.createElement("script");
               scriptTag.src = url;
-              scriptTag.setAttribute('data-loader', 'RS_JS_SDK');
+              scriptTag.setAttribute("data-loader", "RS_JS_SDK");
               if (extraAttributeKey && extraAttributeVal) {
                 scriptTag.setAttribute(extraAttributeKey, extraAttributeVal);
               }
-              if (scriptLoadingMode === 'async') {
+              if (scriptLoadingMode === "async") {
                 scriptTag.async = true;
-              } else if (scriptLoadingMode === 'defer') {
+              } else if (scriptLoadingMode === "defer") {
                 scriptTag.defer = true;
               }
               if (head) {
@@ -105,8 +88,8 @@
                     if (typeof self !== "undefined") { 
                       return self; 
                     }
-                    if (typeof window !== 'undefined') {
-                      return window;
+                    if (typeof window !== "undefined") { 
+                      return window; 
                     }
                     return null;
                   };
@@ -116,53 +99,44 @@
                   if (global) {
                     Object.defineProperty(global, 'globalThis', {
                       value: global,
-                      configurable: true,
+                      configurable: true
                     });
                   }
                 }
               })();
-              window.rudderAnalyticsAddScript(
-                ''
-                  .concat(sdkBaseUrl, '/')
-                  .concat(window.rudderAnalyticsBuildType, '/')
-                  .concat(sdkName),
-                'data-rsa-write-key',
-                '__WRITE_KEY__',
-              );
+              window.rudderAnalyticsAddScript("".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName), "data-rsa-write-key", "__WRITE_KEY__");
             };
-            if (typeof Promise === 'undefined' || typeof globalThis === 'undefined') {
-              window.rudderAnalyticsAddScript(
-                'https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount',
-              );
+            if (typeof Promise === "undefined" || typeof globalThis === "undefined") {
+              window.rudderAnalyticsAddScript("https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount");
             } else {
               window.rudderAnalyticsMount();
             }
+
+            var loadOptions = {
+              logLevel: 'DEBUG',
+              configUrl: '__CONFIG_SERVER_HOST__',
+              destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
+              pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
+              consentManagement: {
+                enabled: true,
+                provider: 'oneTrust',
+              },
+              storage: {
+                migrate: true,
+              },
+            };
+
+            window.manualLoad = function (writeKey, dataplane, manualLoadOptions) {
+              var loadOpts = manualLoadOptions || loadOptions;
+
+              rudderanalytics.load(writeKey, dataplane, loadOpts);
+
+              window.userWriteKey = writeKey;
+              window.userConfigUrl = loadOpts.configUrl;
+            };
           }
         }
       })();
-
-      var loadOptions = {
-        logLevel: 'DEBUG',
-        configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
-        pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
-        consentManagement: {
-          enabled: true,
-          provider: 'oneTrust',
-        },
-        storage: {
-          migrate: true,
-        },
-      };
-
-      window.manualLoad = function (writeKey, dataplane, manualLoadOptions) {
-        var loadOpts = manualLoadOptions || loadOptions;
-
-        rudderanalytics.load(writeKey, dataplane, loadOpts);
-
-        window.userWriteKey = writeKey;
-        window.userConfigUrl = loadOpts.configUrl;
-      };
 
       rudderanalytics.ready(function () {
         console.log('We are all set!!!');
